<resources>
    <string name="app_name">Found It</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click To Login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">Log Out</string>
    <string name="username">Username</string>
    <string name="login_title">Login</string>
    <string name="login_btn">login</string>
</resources>